--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,27 +1,33 @@
-stage('Build') {
+pipeline {
+  agent any
   environment {
-    IMAGE_NAME = 'flask-shopping-list'       // change if you prefer
-    IMAGE_TAG  = "${env.BUILD_NUMBER}-${env.GIT_COMMIT.take(7)}"
+    IMAGE_NAME = 'flask-shopping-list'
   }
-  steps {
-    sh '''
-      set -euxo pipefail
-      mkdir -p build
-      BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ)
+  stages {
+    stage('Build') {
+      steps {
+        script {
+          // Compute tag from build number + short commit
+          env.COMMIT    = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
+          env.IMAGE_TAG = "${env.BUILD_NUMBER}-${env.COMMIT}"
+        }
+        sh """
+          set -euxo pipefail
+          mkdir -p build
+          BUILD_DATE=\$(date -u +%Y-%m-%dT%H:%M:%SZ)
 
-      docker build \
-        --label org.opencontainers.image.title=${IMAGE_NAME} \
-        --label org.opencontainers.image.revision=${GIT_COMMIT} \
-        --label org.opencontainers.image.created=${BUILD_DATE} \
-        -t ${IMAGE_NAME}:${IMAGE_TAG} .
+          docker build \
+            --label org.opencontainers.image.title=${IMAGE_NAME} \
+            --label org.opencontainers.image.revision=${COMMIT} \
+            --label org.opencontainers.image.created=\$BUILD_DATE \
+            -t ${IMAGE_NAME}:${IMAGE_TAG} .
 
-      # Record metadata for traceability
-      docker image inspect ${IMAGE_NAME}:${IMAGE_TAG} --format='{{json .Id}}' > build/image-id.json
-      echo "${IMAGE_NAME}:${IMAGE_TAG}" > build/image-tag.txt
-
-      # Make a portable artefact you can archive or move to another host
-      docker save ${IMAGE_NAME}:${IMAGE_TAG} -o build/${IMAGE_NAME}-${IMAGE_TAG}.tar
-    '''
-    archiveArtifacts artifacts: 'build/**', fingerprint: true
+          docker image inspect ${IMAGE_NAME}:${IMAGE_TAG} --format='{{json .Id}}' > build/image-id.json
+          echo "${IMAGE_NAME}:${IMAGE_TAG}" > build/image-tag.txt
+          docker save ${IMAGE_NAME}:${IMAGE_TAG} -o build/${IMAGE_NAME}-${IMAGE_TAG}.tar
+        """
+        archiveArtifacts artifacts: 'build/**', fingerprint: true
+      }
+    }
   }
 }
