--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,12 +1,9 @@
 pipeline {
   agent any
-
   environment {
-    IMAGE_NAME = 'flask-shopping-list'
+    IMAGE_NAME = 'flask-shopping-list'  // change if you like
   }
-
   stages {
-
     stage('Checkout') {
       steps {
         checkout scm
@@ -15,8 +12,11 @@ pipeline {
 
     stage('Build') {
       steps {
+        // optional diagnostics
         bat 'where docker'
         bat 'docker --version'
+
+        // Compute COMMIT + IMAGE_TAG, then build and save artefact
         bat '''
           setlocal ENABLEDELAYEDEXPANSION
           for /f %%i in ('git rev-parse --short HEAD') do set COMMIT=%%i
@@ -28,76 +28,58 @@ pipeline {
 
           docker images --no-trunc --quiet %IMAGE_NAME%:%IMAGE_TAG% > build\\image-id.txt
           echo %IMAGE_NAME%:%IMAGE_TAG% > build\\image-tag.txt
+
           docker save -o build\\%IMAGE_NAME%-%IMAGE_TAG%.tar %IMAGE_NAME%:%IMAGE_TAG%
         '''
       }
     }
 
-    stage('Test - Unit') {
-      steps {
-        bat '''
-          setlocal ENABLEDELAYEDEXPANSION
-          for /f %%i in ('git rev-parse --short HEAD') do set COMMIT=%%i
-          set IMAGE_TAG=%BUILD_NUMBER%-%COMMIT%
+stage('Test') {
+  steps {
+    bat '''
+      setlocal ENABLEDELAYEDEXPANSION
+      for /f %%i in ('git rev-parse --short HEAD') do set COMMIT=%%i
+      set IMAGE_NAME=flask-shopping-list
+      set IMAGE_TAG=%BUILD_NUMBER%-%COMMIT%
+      set PORT=5001
 
-          if exist reports rmdir /s /q reports
-          mkdir reports\\junit
+      rem --- start app container for integration smoke ---
+      docker rm -f sl_test 2>nul || echo ok
+      docker run -d --name sl_test -p %PORT%:5000 %IMAGE_NAME%:%IMAGE_TAG%
 
-          docker run --rm ^
-            -e PYTHONPATH=/app ^
-            -v "%cd%\\tests":/tests ^
-            -v "%cd%\\reports":/tests/reports ^
-            -w /tests ^
-            %IMAGE_NAME%:%IMAGE_TAG% ^
-            sh -lc "pip install -q pytest pytest-cov && \
-                    pytest -vv -rA --color=yes \
-                      --maxfail=1 --disable-warnings \
-                      --cov=app --cov-report=xml:/tests/reports/coverage.xml \
-                      --cov-fail-under=75 \
-                      --junitxml=/tests/reports/junit/pytest-unit.xml"
-        '''
-      }
-      post {
-        always {
-          junit 'reports/junit/pytest-unit.xml'
-          archiveArtifacts artifacts: 'reports/**', fingerprint: true
-        }
-      }
+      rem --- wait for /health to be 200, else fail fast ---
+      powershell -Command "$ErrorActionPreference='Stop'; \
+        $ok=$false; \
+        for($i=0;$i -lt 30;$i++){ \
+          try{ \
+            $r=Invoke-WebRequest http://localhost:%PORT%/health -UseBasicParsing; \
+            if($r.StatusCode -eq 200){ $ok=$true; break } \
+          } catch { Start-Sleep -s 2 } \
+        }; \
+        if(-not $ok){ Write-Error 'App did not become healthy in time'; exit 1 }"
+
+      rem --- smoke the login page (HTTP 200 expected) ---
+      powershell -Command "$ErrorActionPreference='Stop'; \
+        $r=Invoke-WebRequest http://localhost:%PORT%/login -UseBasicParsing; \
+        if($r.StatusCode -ne 200){ Write-Error 'Login page not OK'; exit 1 }"
+
+      rem --- cleanup ---
+      docker rm -f sl_test
+    '''
+  }
+  post {
+    failure {
+      bat 'echo --- sl_test logs (if any) --- & docker logs sl_test || echo no logs & docker rm -f sl_test || exit /b 0'
     }
+  }
+}
 
-    stage('Test - Smoke') {
-      steps {
-        bat '''
-          setlocal ENABLEDELAYEDEXPANSION
-          for /f %%i in ('git rev-parse --short HEAD') do set COMMIT=%%i
-          set IMAGE_TAG=%BUILD_NUMBER%-%COMMIT%
-          set PORT=5001
 
-          docker rm -f sl_test 2>nul || echo ok
-          docker run -d --name sl_test -p %PORT%:5000 %IMAGE_NAME%:%IMAGE_TAG%
-
-          powershell -Command "$ErrorActionPreference='Stop'; \
-            $ok=$false; for($i=0;$i -lt 30;$i++){ \
-              try{ $r=Invoke-WebRequest http://localhost:%PORT%/health -UseBasicParsing; if($r.StatusCode -eq 200){ $ok=$true; break } } \
-              catch { Start-Sleep -s 2 } \
-            }; if(-not $ok){ Write-Error 'App did not become healthy in time'; exit 1 }; \
-            $l=Invoke-WebRequest http://localhost:%PORT%/login -UseBasicParsing; \
-            if($l.StatusCode -ne 200){ Write-Error 'Login page not OK'; exit 1 }"
-          docker rm -f sl_test
-        '''
-      }
-      post {
-        failure {
-          bat 'echo --- sl_test logs --- & docker logs sl_test || echo (no container) & docker rm -f sl_test || exit /b 0'
-        }
-      }
-    }
 
     stage('Archive artefacts') {
       steps {
         archiveArtifacts artifacts: 'build/**', fingerprint: true
       }
     }
-
-  } // end stages
-} // end pipeline
+  }
+}
