--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==3.0.3
 Flask-WTF==1.2.1
-SQLAlchemy==2.0.35
 Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+SQLAlchemy==2.0.35
 email-validator==2.2.0
 Werkzeug==3.0.4
+itsdangerous==2.2.0
