--- a/JenkinsFile
+++ b/JenkinsFile
@@ -101,18 +101,13 @@ stage('Code Quality (SonarQube)') {
   steps {
     withSonarQubeEnv('HD') {
       bat '''
-        rem --- Prepare a container-reachable Sonar URL ---
-        rem SONAR_HOST_URL is injected by withSonarQubeEnv
+        rem --- Make SONAR_HOST_URL usable from inside the Docker container ---
         set "SONAR_URL=%SONAR_HOST_URL:localhost=host.docker.internal%"
-
-        rem (Optional) debug
-        echo SONAR_HOST_URL=%SONAR_HOST_URL%
-        echo SONAR_URL=%SONAR_URL%
 
         rem --- Run sonar-scanner in Docker, mounting the workspace ---
         docker run --rm ^
           -e SONAR_HOST_URL=%SONAR_URL% ^
-          -e SONAR_LOGIN=%SONAR_AUTH_TOKEN% ^
+          -e SONAR_TOKEN=%SONAR_AUTH_TOKEN% ^
           -v "%cd%":/usr/src ^
           sonarsource/sonar-scanner-cli:5.0 ^
           -Dsonar.projectBaseDir=/usr/src ^
@@ -121,6 +116,7 @@ stage('Code Quality (SonarQube)') {
     }
   }
 }
+
 
 stage('Quality Gate') {
   steps {
