--- a/JenkinsFile
+++ b/JenkinsFile
@@ -102,19 +102,21 @@ stage('Code Quality') {
     script {
       def scannerHome = tool name: 'SonarScanner', type: 'hudson.plugins.sonar.SonarRunnerInstallation'
       withSonarQubeEnv('HD') {
-        bat """
-          "${scannerHome}\\bin\\sonar-scanner.bat" ^
-            -Dsonar.projectKey=flask-shopping-list ^
-            -Dsonar.projectName=Flask Shopping List ^
-            -Dsonar.sources=. ^
-            -Dsonar.tests=tests ^
-            -Dsonar.python.version=3.11 ^
-            -Dsonar.python.coverage.reportPaths=reports/coverage.xml ^
-            -Dsonar.projectVersion=%BUILD_NUMBER% ^
-            -Dsonar.host.url=%SONAR_HOST_URL% ^
-            -Dsonar.token=%SONAR_AUTH_TOKEN%
-        """
-      }
+  def scannerHome = tool name: 'SonarScanner', type: 'hudson.plugins.sonar.SonarRunnerInstallation'
+  bat """
+    "${scannerHome}\\bin\\sonar-scanner.bat" ^
+      -Dsonar.projectKey=flask-shopping-list ^
+      -Dsonar.projectName="Flask Shopping List" ^
+      -Dsonar.sources=. ^
+      -Dsonar.tests=tests ^
+      -Dsonar.python.version=3.11 ^
+      -Dsonar.python.coverage.reportPaths=reports/coverage.xml ^
+      -Dsonar.projectVersion=%BUILD_NUMBER% ^
+      -Dsonar.host.url=%SONAR_HOST_URL% ^
+      -Dsonar.token=%SONAR_AUTH_TOKEN%
+  """
+}
+
     }
   }
 }
