--- a/JenkinsFile
+++ b/JenkinsFile
@@ -100,14 +100,17 @@ stage('Test - Smoke') {
 stage('Code Quality') {
   steps {
     script {
-      def sonarScanner = tool name: 'SonarScanner',
-                              type: 'hudson.plugins.sonar.SonarRunnerInstallation'
+      def scannerHome = tool name: 'SonarScanner', type: 'hudson.plugins.sonar.SonarRunnerInstallation'
       withSonarQubeEnv('HD') {
         bat """
-          "${sonarScanner}\\bin\\sonar-scanner.bat" ^
-            -Dsonar.projectVersion=%BUILD_NUMBER% ^
-            -Dsonar.host.url=%SONAR_HOST_URL% ^
-            -Dsonar.token=%SONAR_AUTH_TOKEN%
+          "${scannerHome}\\bin\\sonar-scanner.bat" ^
+            -Dsonar.projectKey=flask-shopping-list ^
+            -Dsonar.projectName="Flask Shopping List" ^
+            -Dsonar.sources=. ^
+            -Dsonar.tests=tests ^
+            -Dsonar.python.version=3.11 ^
+            -Dsonar.python.coverage.reportPaths=reports/coverage.xml ^
+            -Dsonar.projectVersion=%BUILD_NUMBER%
         """
       }
     }
@@ -115,18 +118,13 @@ stage('Code Quality') {
 }
 
 
-
-
 stage('Quality Gate') {
   steps {
     timeout(time: 10, unit: 'MINUTES') {
-      // Fails the pipeline if the gate fails
       waitForQualityGate abortPipeline: true
     }
   }
 }
-
-
 
 
 
