--- a/JenkinsFile
+++ b/JenkinsFile
@@ -118,68 +118,78 @@ stage('Code Quality') {
 
 stage('Security') {
   steps {
-    bat '''
+    // Keep security reports separate (don’t wipe other stage reports)
+    bat """
+      if not exist reports mkdir reports
+      if exist reports\\security rmdir /s /q reports\\security
+      mkdir reports\\security
+    """
+
+    // ---------- Bandit (SAST)
+    bat """
       setlocal ENABLEDELAYEDEXPANSION
-
-      rem --- Vars we already use elsewhere ---
       for /F %%i in ('git rev-parse --short HEAD') do set COMMIT=%%i
-      set IMAGE_NAME=flask-shopping-list
-      set IMAGE_TAG=%BUILD_NUMBER%-%COMMIT%
-      set TAR=build\\%IMAGE_NAME%-%IMAGE_TAG%.tar
+      set IMAGE_NAME=%IMAGE_NAME%
+      set IMAGE_TAG=%BUILD_NUMBER%-!COMMIT!
 
-      rem Fresh reports dir
-      if exist reports rmdir /s /q reports
-      mkdir reports
-
-      rem ==========================================
-      rem 1) SAST: Bandit (scan Python source)
-      rem ==========================================
       docker run --rm ^
         -e PYTHONPATH=/app ^
-        -v "%cd%\\reports":/reports ^
+        -v "%cd%\\reports\\security":/reports ^
         -w /app ^
         %IMAGE_NAME%:%IMAGE_TAG% ^
         sh -lc "pip install -q bandit && bandit -q -r app -f json -o /reports/bandit.json || true"
+    """
 
-      rem ==========================================
-      rem 2) SCA: pip-audit (scan Python dependencies)
-      rem     We don't fail immediately; we’ll decide in PowerShell
-      rem ==========================================
+    // ---------- pip-audit (SCA)
+    bat """
+      setlocal ENABLEDELAYEDEXPANSION
+      for /F %%i in ('git rev-parse --short HEAD') do set COMMIT=%%i
+      set IMAGE_NAME=%IMAGE_NAME%
+      set IMAGE_TAG=%BUILD_NUMBER%-!COMMIT!
+
       docker run --rm ^
         -e PYTHONPATH=/app ^
-        -v "%cd%\\reports":/reports ^
+        -v "%cd%\\reports\\security":/reports ^
         -w /app ^
         %IMAGE_NAME%:%IMAGE_TAG% ^
         sh -lc "pip install -q pip-audit && pip-audit -r requirements.txt -f json -o /reports/pip-audit.json || true"
+    """
 
-      rem ==========================================
-      rem 3) Container scan: Trivy (scan the saved image TAR)
-      rem    (No Docker socket needed; we scan the tar file)
-      rem ==========================================
+    // ---------- Trivy (image scan from saved TAR)
+    bat """
+      setlocal ENABLEDELAYEDEXPANSION
+      for /F %%i in ('git rev-parse --short HEAD') do set COMMIT=%%i
+      set IMAGE_NAME=%IMAGE_NAME%
+      set IMAGE_TAG=%BUILD_NUMBER%-!COMMIT!
+      set TAR=artifacts\\%IMAGE_NAME%-%IMAGE_TAG%.tar
+
+      if not exist "!TAR!" (
+        echo Trivy: TAR not found at !TAR!
+        exit /b 1
+      )
+
       docker run --rm ^
-        -v "%cd%\\build":/work ^
-        -v "%cd%\\reports":/reports ^
+        -v "%cd%\\artifacts":/work ^
+        -v "%cd%\\reports\\security":/reports ^
         aquasec/trivy:0.56.2 ^
           image --input /work/%IMAGE_NAME%-%IMAGE_TAG%.tar ^
           --format sarif --severity HIGH,CRITICAL ^
           --output /reports/trivy.sarif ^
           || exit /b 0
-    '''
+    """
 
-    // ---- Summarize & gate in one place (Windows PowerShell) ----
+    // ---- Summarize & gate (no plugin deps)
     powershell(returnStatus: true, script: '''
       $ErrorActionPreference = "Stop"
 
-      # Read reports if they exist; otherwise use empty objects
       function Read-Json($p){ if(Test-Path $p){ Get-Content $p -Raw | ConvertFrom-Json } else { $null } }
 
-      $bandit = Read-Json "reports/bandit.json"
-      $audit  = Read-Json "reports/pip-audit.json"
-      $sarif  = Read-Json "reports/trivy.sarif"
+      $bandit = Read-Json "reports/security/bandit.json"
+      $audit  = Read-Json "reports/security/pip-audit.json"
+      $sarif  = Read-Json "reports/security/trivy.sarif"
 
-      # -------- Bandit summary --------
-      $banditIssues = 0
-      $banditHigh   = 0
+      # Bandit
+      $banditIssues = 0; $banditHigh = 0
       if($bandit){
         $banditIssues = ($bandit.results | Measure-Object).Count
         $banditHigh   = ($bandit.results | Where-Object { $_.issue_severity -eq "HIGH" } | Measure-Object).Count
@@ -188,10 +198,9 @@ stage('Security') {
         Write-Host "Bandit: no report"
       }
 
-      # -------- pip-audit summary --------
+      # pip-audit
       $auditIssues = 0; $auditHigh = 0
       if($audit){
-        # pip-audit JSON schema: top-level 'dependencies' list -> each 'vulns'
         $vulns = @()
         foreach($d in $audit.dependencies){ if($d.vulns){ $vulns += $d.vulns } }
         $auditIssues = $vulns.Count
@@ -201,20 +210,18 @@ stage('Security') {
         Write-Host "pip-audit: no report"
       }
 
-      # -------- Trivy summary (SARIF) --------
+      # Trivy SARIF
       $trivyIssues = 0
       if($sarif){
+        # SARIF structure: runs[0].results
         $trivyIssues = ($sarif.runs[0].results | Measure-Object).Count
         Write-Host "Trivy: $trivyIssues HIGH/CRITICAL image vulns"
       } else {
         Write-Host "Trivy: no report"
       }
 
-      # --- Gate logic ---
-      # Fail build if any HIGH/CRITICAL in deps or image, or HIGH in bandit
+      # Gate: fail on any HIGH/CRITICAL
       $fail = ($banditHigh -gt 0) -or ($auditHigh -gt 0) -or ($trivyIssues -gt 0)
-
-      # Mark UNSTABLE if there are any issues at all (but not high)
       $unstable = (-not $fail) -and ( ($banditIssues -gt 0) -or ($auditIssues -gt 0) )
 
       if($fail){
@@ -229,14 +236,10 @@ stage('Security') {
       }
     ''')
   }
-
   post {
     always {
-      // Keep the evidence
-      archiveArtifacts artifacts: 'reports/**', fingerprint: true
-
-      // If you have Warnings NG plugin, this will show Trivy SARIF in Jenkins UI
-      recordIssues enabledForFailure: true, tools: [sarif(pattern: 'reports/trivy.sarif')]
+      // Only archive; no 'sarif' step needed
+      archiveArtifacts artifacts: 'reports/security/**', fingerprint: true
     }
     unstable {
       echo 'Build marked UNSTABLE due to non-critical security issues.'
@@ -246,7 +249,6 @@ stage('Security') {
     }
   }
 }
-
 
 
     stage('Archive artefacts') {
