--- a/JenkinsFile
+++ b/JenkinsFile
@@ -150,6 +150,52 @@ stage('Security') {
   }
 }
 
+stage('Deploy - Staging') {
+  when { branch 'main' } // optional: only deploy from main
+  steps {
+    script {
+      // 1) Read the exact image tag saved in Build stage (e.g. "flask-shopping-list:46-abc1234")
+      bat '''
+        setlocal ENABLEDELAYEDEXPANSION
+        if not exist deploy mkdir deploy
+        copy /Y docker-compose.staging.yml deploy\\docker-compose.staging.yml >NUL
+
+        for /f %%i in (build\\image-tag.txt) do set IMAGE=%%i
+        echo Using image: !IMAGE!
+
+        rem 2) Bring the compose stack up (clean old stack first, don’t fail if nothing is running)
+        pushd deploy
+        docker compose -f docker-compose.staging.yml down || echo ok
+
+        rem Pass IMAGE to compose via env var so ${IMAGE} is resolved
+        set IMAGE=!IMAGE!
+        docker compose -f docker-compose.staging.yml up -d --remove-orphans
+        popd
+      '''
+
+      // 3) Health-check the running app on port 5002
+      bat '''
+        powershell -Command "$ErrorActionPreference='Stop'; \
+          $ok=$false; for($i=0;$i -lt 60;$i++){ \
+            try{ $r=Invoke-WebRequest http://localhost:5002/health -UseBasicParsing; \
+                 if($r.StatusCode -eq 200){ $ok=$true; break } } \
+            catch { Start-Sleep -s 2 } \
+          }; if(-not $ok){ Write-Error 'Staging app did not become healthy'; exit 1 }"
+      '''
+    }
+  }
+  post {
+    success {
+      echo 'Staging deployed & healthy at http://localhost:5002'
+    }
+    failure {
+      // Helpful logs on failure
+      bat 'docker compose -f deploy\\docker-compose.staging.yml ps > reports\\deploy-ps.txt || echo ok'
+      bat 'docker compose -f deploy\\docker-compose.staging.yml logs > reports\\deploy-logs.txt || echo ok'
+      archiveArtifacts artifacts: 'reports/deploy-*.txt', fingerprint: true
+    }
+  }
+}
 
     stage('Archive artefacts') {
       steps {
